--- a/RBGNature/RBGNature.csproj
+++ b/RBGNature/RBGNature.csproj
@@ -50,8 +50,9 @@
     <Compile Include="Actor\ParentActor.cs" />
     <Compile Include="Actor\Scene\BaseScene.cs" />
     <Compile Include="Actor\Scene\DemoScene.cs" />
-    <Compile Include="Graphics\Animation.cs" />
-    <Compile Include="Graphics\Animator.cs" />
+    <Compile Include="Graphics\Animation\Animation.cs" />
+    <Compile Include="Graphics\Animation\AnimationDictionary.cs" />
+    <Compile Include="Graphics\Animation\Animator.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Actor\Player.cs" />
