Added support for Text Effects

--- a/RBGNature/RBGNature.csproj
+++ b/RBGNature/RBGNature.csproj
@@ -50,12 +50,15 @@
     <Compile Include="Actor\ParentActor.cs" />
     <Compile Include="Actor\Scene\BaseScene.cs" />
     <Compile Include="Actor\Scene\DemoScene.cs" />
-    <Compile Include="Graphics\Animation\Animation.cs" />
-    <Compile Include="Graphics\Animation\AnimationDictionary.cs" />
-    <Compile Include="Graphics\Animation\Animator.cs" />
+    <Compile Include="Graphics\Animate\Animation.cs" />
+    <Compile Include="Graphics\Animate\AnimationDictionary.cs" />
+    <Compile Include="Graphics\Animate\Animator.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Actor\Player.cs" />
+    <Compile Include="Graphics\Text\Fragment.cs" />
+    <Compile Include="Graphics\Text\TextEffect.cs" />
+    <Compile Include="Graphics\Text\FragmentWriter.cs" />
     <Compile Include="Physics\Circle.cs" />
     <Compile Include="Physics\CollisionIdentity.cs" />
     <Compile Include="Physics\CollisionResult.cs" />
