--- a/RBGNature/RBGNature.csproj
+++ b/RBGNature/RBGNature.csproj
@@ -44,7 +44,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Actor\BaseActor.cs" />
+    <Compile Include="Actor\Enemy\WalkingEnemy.cs" />
     <Compile Include="Actor\Enemy\TestEnemy.cs" />
+    <Compile Include="Actor\Interactible\Item.cs" />
     <Compile Include="Actor\Map\DemoMap.cs" />
     <Compile Include="Actor\Map\TestMap.cs" />
     <Compile Include="Actor\ParentActor.cs" />
