--- a/RBGNature/RBGNature.csproj
+++ b/RBGNature/RBGNature.csproj
@@ -43,9 +43,10 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Actor\BaseActor.cs" />
+    <Compile Include="Actor\IAct.cs" />
     <Compile Include="Actor\Enemy\WalkingEnemy.cs" />
     <Compile Include="Actor\Enemy\TestEnemy.cs" />
+    <Compile Include="Actor\IActExtensions.cs" />
     <Compile Include="Actor\Interactible\Item.cs" />
     <Compile Include="Actor\Map\DemoMap.cs" />
     <Compile Include="Actor\Map\TestMap.cs" />
