--- a/RBGNature/RBGNature.csproj
+++ b/RBGNature/RBGNature.csproj
@@ -53,6 +53,8 @@
     <Compile Include="Actor\ParentActor.cs" />
     <Compile Include="Actor\Scene\BaseScene.cs" />
     <Compile Include="Actor\Scene\DemoScene.cs" />
+    <Compile Include="Actor\Scene\DemoScene2.cs" />
+    <Compile Include="Actor\Scene\SceneManager.cs" />
     <Compile Include="Graphics\Animate\Animation.cs" />
     <Compile Include="Graphics\Animate\AnimationDictionary.cs" />
     <Compile Include="Graphics\Animate\Animator.cs" />
